Add link to demo screenshots to the README

--- a/README
+++ b/README
@@ -5,6 +5,10 @@ Hugo Ugly is a Hugo theme that attempts to be a simple as possible while still p
 
 The resulting unstyled markup is therefore either "ugly" or "the most beautifully perfect thing on the internet" or both, depending on your outlook.
 
+You can find screenshots at the following link:
+
+https://github.com/appleby/hugo-ugly/wiki/Hugo-Ugly-Demo-Screenshots
+
 Why?
 ----
 
